fixed path issues

--- a/css_snw/form.css
+++ b/css_snw/form.css
@@ -25,7 +25,7 @@
 
 #yt0
 {
-	background:url(/images/form_submit.png) no-repeat;
+	background:url(../images/form_submit.png) no-repeat;
 	height:38px;
 	width:78px;
 	border:none;
